--- a/app/src/main/res/layout/activity_goods_order_settlement.xml
+++ b/app/src/main/res/layout/activity_goods_order_settlement.xml
@@ -35,6 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:divider="@null"
+                android:dividerHeight="@dimen/dimen_0dp"
                 android:groupIndicator="@null"
                 android:visibility="gone"></com.shian.shianlife.view.ScrollExpandableListView>
 
