--- a/app/src/main/res/layout/item_goods_class_list.xml
+++ b/app/src/main/res/layout/item_goods_class_list.xml
@@ -20,5 +20,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
+        android:layout_marginLeft="@dimen/dimen_32dp"
+        android:layout_marginRight="@dimen/dimen_32dp"
         android:background="@color/zhy_line_3" />
 </LinearLayout>
