--- a/app/src/main/res/layout/store_order_expendlist_group.xml
+++ b/app/src/main/res/layout/store_order_expendlist_group.xml
@@ -2,7 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/zhy_backgroud_1"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:background="@color/zhy_line_3" />
 
     <TextView
         android:id="@+id/tv_content"
