--- a/app/src/main/res/layout/dialog_data_show_layout.xml
+++ b/app/src/main/res/layout/dialog_data_show_layout.xml
@@ -7,6 +7,7 @@
 
 
     <LinearLayout
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -40,7 +41,8 @@
         android:id="@+id/iv_cancel"
         android:layout_width="@dimen/dimen_80dp"
         android:layout_height="@dimen/dimen_80dp"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/zhy_cancel_2" />
+        android:layout_below="@+id/ll_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/dimen_64dp"
+        android:src="@drawable/zhy_cancel_3" />
 </RelativeLayout>
