--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,27 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/fl_main"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/white">
+            android:layout_weight="1">
 
-        </FrameLayout>
+            <FrameLayout
+                android:id="@+id/fl_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"></FrameLayout>
+
+            <com.shian.shianlife.view.goods.GoodsShoppingCartButton
+                android:id="@+id/bt_goods_shopping_cart"
+                android:layout_width="@dimen/dimen_120dp"
+                android:layout_height="@dimen/dimen_120dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/zhy_goods_shopping_cart"></com.shian.shianlife.view.goods.GoodsShoppingCartButton>
+
+        </RelativeLayout>
+
 
         <TextView
             android:layout_width="match_parent"
@@ -106,6 +119,7 @@
                     android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
+
                 <RelativeLayout
                     android:layout_width="@dimen/dimen_0dp"
                     android:layout_height="match_parent"
