--- a/app/src/main/res/layout/activity_store_order_details.xml
+++ b/app/src/main/res/layout/activity_store_order_details.xml
@@ -74,6 +74,7 @@
                 android:textColor="@color/black" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/tv_money_customer"
                 android:layout_width="@dimen/dimen_200dp"
                 android:layout_height="match_parent"
@@ -104,6 +105,7 @@
                 android:textColor="@color/black" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/tv_money_counselor"
                 android:layout_width="@dimen/dimen_200dp"
                 android:layout_height="match_parent"
