--- a/app/src/main/res/layout/dialog_tips.xml
+++ b/app/src/main/res/layout/dialog_tips.xml
@@ -19,7 +19,9 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="@dimen/dimen_318dp"
+        android:paddingRight="@dimen/dimen_32dp"
+        android:paddingLeft="@dimen/dimen_32dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
         android:layout_marginBottom="@dimen/dimen_40dp"
