--- a/app/src/main/res/layout/activity_userinfo_integral_details.xml
+++ b/app/src/main/res/layout/activity_userinfo_integral_details.xml
@@ -7,11 +7,9 @@
     android:background="@color/zhy_backgroud_1"
     tools:context="com.shian.shianlife.activity.userinfo.UserInfoIntegralDetailsActivity">
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/pull_listview"
-        android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="wrap_content">
 
-    </com.handmark.pulltorefresh.library.PullToRefreshListView>
+    <com.shian.shianlife.view.listview.IntegralListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.shian.shianlife.view.listview.IntegralListView>
 </RelativeLayout>
