--- a/app/src/main/res/layout/view_details_items.xml
+++ b/app/src/main/res/layout/view_details_items.xml
@@ -1,41 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="horizontal">
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_marginLeft="@dimen/dimen_32dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_132dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:text=""
+                android:textColor="@color/black_item_shua_textcolor"
+                android:textSize="@dimen/dimen_32dp" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dimen_32dp"
+                android:text=""
+                android:textColor="@color/zhy_text_color_8"
+                android:textSize="@dimen/dimen_24dp" />
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/tv_title"
-            android:text="签到"
-            android:textColor="@color/black_item_shua_textcolor"
-            android:layout_marginRight="@dimen/dimen_32dp"
-            android:textSize="@dimen/dimen_32dp"
+            android:id="@+id/tv_point"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_time"
-            android:text="2010-10-10"
-            android:textColor="@color/zhy_text_color_8"
+            android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/dimen_32dp"
-            android:textSize="@dimen/dimen_24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:text=""
+            android:textColor="@color/zhy_text_color_4"
+            android:textSize="@dimen/dimen_36dp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_point"
-        android:text="+5"
-        android:textColor="@color/zhy_text_color_4"
-        android:layout_marginRight="@dimen/dimen_32dp"
-        android:textSize="@dimen/dimen_36dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:background="@color/zhy_line_3" />
 </LinearLayout>
