--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,7 @@
                 android:id="@+id/fl_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"></FrameLayout>
-
-            <com.shian.shianlife.view.goods.GoodsShoppingCartButton
-                android:id="@+id/bt_goods_shopping_cart"
-                android:layout_width="@dimen/dimen_120dp"
-                android:layout_height="@dimen/dimen_120dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/zhy_goods_shopping_cart"></com.shian.shianlife.view.goods.GoodsShoppingCartButton>
+                android:background="@color/zhy_backgroud_1"></FrameLayout>
 
         </RelativeLayout>
 
@@ -97,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:button="@null"
-                    android:drawableTop="@drawable/ic_bar_find_selector_2"
+                    android:drawableTop="@drawable/ic_bar_shoppingcart_selector"
                     android:gravity="center_horizontal"
                     android:text="@string/main_4"
                     android:textColor="@color/main_rb_text_color"
