--- a/app/src/main/res/layout/activity_login_phone.xml
+++ b/app/src/main/res/layout/activity_login_phone.xml
@@ -82,7 +82,7 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:hint="请输入验证码"
-                    android:inputType="numberPassword"
+                    android:inputType="number"
                     android:lines="1"
                     android:textColorHint="@color/zhy_text_color_2"
                     android:textSize="@dimen/dimen_24dp" />
