--- a/app/src/main/res/layout/item_goods_query_list_layout.xml
+++ b/app/src/main/res/layout/item_goods_query_list_layout.xml
@@ -7,13 +7,29 @@
     android:background="@drawable/zhy_button_state_ll_white"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_icon"
+    <RelativeLayout
         android:layout_width="@dimen/dimen_208dp"
         android:layout_height="@dimen/dimen_208dp"
         android:layout_gravity="center_vertical"
-        android:layout_margin="@dimen/dimen_5dp"
-        android:src="@color/zhy_backgroud_1" />
+        android:layout_margin="@dimen/dimen_5dp">
+
+        <ImageView
+            android:id="@+id/iv_icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@color/zhy_backgroud_1" />
+
+        <ImageView
+            android:id="@+id/iv_package"
+            android:layout_width="@dimen/dimen_80dp"
+            android:layout_height="@dimen/dimen_40dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dimen_8dp"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            android:src="@drawable/zhy_goods_icon_ispackage"
+            android:visibility="gone" />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
