--- a/app/src/main/res/layout/store_order_expendlist_item.xml
+++ b/app/src/main/res/layout/store_order_expendlist_item.xml
@@ -16,15 +16,31 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_goods_pic"
+        <RelativeLayout
             android:layout_width="@dimen/dimen_196dp"
             android:layout_height="@dimen/dimen_196dp"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/dimen_7dp"
             android:layout_marginLeft="@dimen/dimen_80dp"
-            android:layout_marginTop="@dimen/dimen_7dp"
-            android:background="@color/white" />
+            android:layout_marginTop="@dimen/dimen_7dp">
+
+            <ImageView
+                android:id="@+id/iv_goods_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white" />
+
+            <ImageView
+                android:id="@+id/iv_package"
+                android:layout_width="@dimen/dimen_80dp"
+                android:layout_height="@dimen/dimen_40dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dimen_8dp"
+                android:layout_marginTop="@dimen/dimen_8dp"
+                android:src="@drawable/zhy_goods_icon_ispackage"
+                android:visibility="gone" />
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
